# pydcache

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-app.yaml
pydcache/: __init__.py
pydcache/config/: __init__.py  cta-nanny.service  pydcache.yaml
pydcache/scripts/: cta_nanny.py  install_service.py
pydcache/util/: admin.py  kerberos.py  ostools.py  paramiko.py  psycopg.py  ssh.py
scripts/: cta_nanny.py
tests/: test_pydcache.py
