[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydcache"
version = "0.1.0"
description = "Collection of dCache Python utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/DmitryLitvintsev/pydcache"
Issues = "https://github.com/DmitryLitvintsev/pydcache/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydcache*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
