[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydcache"
version = "0.1.7"
description = "Collection of dCache Python utilities"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    { name = "Dmitry Litvintsev", email = "litvinse@fnal.gov" },
]
keywords = ["dcache", "chimera", "tape", "storage", "hep"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "kafka-python>=2.3.1",
    "paramiko>=2.7",
    "psycopg2-binary>=2.8",
    "pyyaml>=5.1",
]

[project.optional-dependencies]
kafka = [
    "kafka-python>=2.0",
]
dev = [
    "build>=1.0",
    "twine>=5.0",
    "pytest>=7.0",
]

[project.scripts]
cta-nanny = "pydcache.scripts.cta_nanny:main"

[project.urls]
Homepage = "https://github.com/DmitryLitvintsev/pydcache"
Issues = "https://github.com/DmitryLitvintsev/pydcache/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydcache*"]

[tool.setuptools.package-data]
"pydcache" = ["py.typed"]
"pydcache.config" = ["*.yaml", "*.service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
